[package]
name = "tree-hugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
nalgebra = "0.32.4"
num = "0.4.1"

[profile.release]
lto = false
codegen-units = 1
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native"]
